# vde-tmux

./: AGENTS.md  Cargo.toml  README.ja.md  README.md  RELEASING.md
.github/workflows/: ci.yml  publish.yml  runtime-smoke.yml
docs/: detect-compat.md  e2e-smoke.md  migration.md  sidebar-action-row-proposals.html  sidebar-detail-view-proposals.html  sidebar-header-proposals.html  sidebar-improvements-proposals.html  sidebar-ui-proposals.html  sidebar-ui-proposals.md  statusline-color-proposals.html  statusline-full-bar-proposals.html  statusline-ui-proposals.html  statusline-ui-proposals.md  statusline-window-list-proposals.html  vde-monitor-compat.md
docs/plans/: 2026-07-04-plan-09-session-status-badge.md  2026-07-04-plan-10-config-sidebar-width-and-warnings.md  2026-07-04-plan-11-sidebar-tui-ui-parity.md  2026-07-05-plan-12-sidebar-runtime-followups.md  2026-07-05-plan-13-sidebar-ui-phase1.md  2026-07-05-plan-14-sidebar-ui-phase2.md  2026-07-05-plan-15-sidebar-ui-phase3.md  2026-07-05-plan-16-sidebar-ui-phase4.md  2026-07-05-plan-17-sidebar-ui-phase5.md  2026-07-05-plan-18-sidebar-review-fixes.md  2026-07-05-plan-19-statusline-phase1.md  2026-07-05-plan-20-statusline-phase2.md  2026-07-05-plan-21-statusline-phase3.md  2026-07-05-plan-22-statusline-phase4.md  2026-07-05-sidebar-redesign-roadmap.md  (+6 more)
schemas/: config.schema.json
scripts/: preflight-ui-ux.sh  smoke-m6-runtime.sh  test-kill-server-isolated.sh  test-neovim-navigation.sh
src/: agent.rs  detect.rs  git.rs  lib.rs  proc.rs  runtime_dir.rs
tests/: nvim-navigation-smoke.lua  tmux_redraw_probe.rs
(+57 files in other folders)
