[package]
name = "vde-tmux"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["Yuki Yano"]
repository = "https://github.com/yuki-yano/vde-tmux"
description = "tmux state & UI manager: session/category, statusline, agent sidebar"
exclude = ["AGENTS.md", "CLAUDE.md"]

[[bin]]
name = "vt"
path = "src/bin/vt.rs"

[[bin]]
name = "vde-tmux"
path = "src/bin/vde-tmux.rs"

[dependencies]
ansi-to-tui = "7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_yaml_ng = "0.10"
unicode-width = "0.2"
